cmake_minimum_required(VERSION 3.1)
project(mutex_test)
include_directories(../include)
link_directories(../build)
set(CMAKE_CXX_FLAGS "${CAMKE_CXX_FLAGS} -std=c++11")
FIND_PACKAGE(Threads)

add_executable(test test.cpp ../../src)
TARGET_LINK_LIBRARIES(test ${CMAKE_THREAD_LIBS_INIT})
TARGET_LINK_LIBRARIES(test libLThreads.a)